<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <LinearLayout
        android:id="@+id/ll_input_network"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp">

        <EditText
            android:id="@+id/et_ip"
            android:hint="@string/txt_ip"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"/>

        <EditText
            android:id="@+id/et_port"
            android:hint="@string/txt_port"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_buttons_play"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_input_network"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/btn_player_one"
            android:text="@string/txt_player_one"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/btn_play"
            android:text="@string/txt_play"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="5"/>

        <Button
            android:id="@+id/btn_player_two"
            android:text="@string/txt_player_two"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

    </LinearLayout>

    <TextView
        android:id="@+id/tv_playing"
        android:text="@string/txt_playing_false"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_buttons_play"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/tv_player"
        android:text="@string/txt_player_current"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_playing"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/tv_sensor_value"
        android:text="@string/txt_sensor_value"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_player"
        android:layout_marginTop="75dp"/>

    <TextView
        android:id="@+id/tv_sensor_datetime"
        android:text="@string/txt_sensor_datetime"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_sensor_value"/>

    <TextView
        android:id="@+id/tv_received"
        android:text="@string/txt_received"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="50dp"/>

</android.support.constraint.ConstraintLayout>